# aexpect

./: .gitignore  .gitmodules  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.rst  aexpect.spec  pyproject.toml  python-aexpect.spec  requirements-travis.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  codeql.yml
aexpect/: __init__.py  client.py  exceptions.py  ops.py  ops_linux.py  ops_windows.py  remote.py  remote_door.py  rss_client.py  shared.py
aexpect/scripts/: aexpect_helper.py
aexpect/utils/: astring.py  data_factory.py  genio.py  path.py  process.py  session_ops.py  wait.py
debian/: changelog  control  watch
optional_modules/ops/: setup.py
optional_modules/ops/aexpect_ops/: linux.py  windows.py
optional_modules/remote/: setup.py
optional_modules/remote/aexpect_remote/: remote.py  rss_client.py
scripts/: aexpect-helper  aexpect_helper
selftests/: checkall
tests/: test_client.py  test_pass_fds.py  test_remote.py  test_remote_door.py  test_utils.py
